tests/ui/hygiene/no_implicit_prelude-2018.stderr
error: cannot find macro `print` in this scope
  --> $DIR/no_implicit_prelude-2018.rs:7:9
   |
LL |         print!();
   |         ^^^^^
   |
help: consider importing this macro
   |
LL +     use std::print;
   |

error: aborting due to 1 previous error

